# miexp

./: .gitattributes  .gitignore  Makefile  README.md  hello.py  pyproject.toml
.github/workflows/: check_experiments.yml  tests.yml
apps/: btransformer_viewer.py
apps/fourier_transformer_viewer/: Makefile  numbers.json  streamlit_vis.py  test_streamlit.py
apps/fourier_transformer_viewer/results/: bulk_events.csv
data/: Makefile  README.md  README_preamble.md
data/results_2_23_25/: bulk_conf.yaml  bulk_events.csv  bulk_metadata.csv  bulk_models.csv  bulk_models.pt
data/results_2_24_25/: bulk_conf.yaml  bulk_events.csv  bulk_metadata.csv  bulk_models.pt
docs/: AltForms.md  Kaunaugh.md  LitReview.md
experiments/boolean_function_training/: Makefile  dataset.pt  logs.csv  model.pth  results.csv  train_transformer.py  visualizations.ipynb  visualize_model.ipynb
experiments/double_majority_training/: Makefile  README.md  create_visualizations.py  dataset.pt  model.pth  numbers.json  results.csv  train_transformer.py
experiments/fourier_training/: Makefile  README.md  bulk_train_parallel.py  create_visualizations.py  dataset.pt  model.pth  results.csv  streamlit_vis.py  train_bulk.py  train_transformer.py
experiments/majority_training/: Makefile  README.md  create_visualizations.py  dataset.pt  model.pth  numbers.json  results.csv  train_results_fig.html  train_transformer.py  visualizations.ipynb
experiments/profile_transformer_training/: Makefile  README.md  bulk_multiprocessing_experiment.py  profile_results.txt  run_profiler.py
experiments/rmaj_training/: Makefile  dataset.pt  model.pth  results.csv  train_transformer.py
notebooks/: train.ipynb  train_bfunc.ipynb
src/miexp/: bfuncs.py  script_util.py  transformer.py
src/miexp/models/: btransformer.py  (+2 more)
tests/: hello.py  test_bfuncs.py  test_dataset_summary.py  test_dmajds.py  test_dnfdataset.py  test_fourierds.py  test_interptransformer.py  test_lambda_model.py  test_majds.py  test_metrics.py  test_param_vis.py  test_rmajds.py  test_saveablemodule.py  test_script_util.py  test_train_util.py  test_transformer.py
(+24 files in other folders)
