[project]
name = "miexp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]
