[project]
name = "miexp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido==0.2.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic>=2.10.3",
    "streamlit>=1.41.1",
    "torch>=2.5.1",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "D", "UP", "PD", "I", "N", "ANN"]
ignore = [
    "D100", "D104"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["ANN", "N806", "D"]
"experiments/**/*.py" = ["D"]
"apps/**/*.py" = ["D"]


[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.pyright]
typeCheckingMode = "standard"
